[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/mainScene.gd" type="Script" id=1]
[ext_resource path="res://assets/Mossy Tileset/Mossy - TileSet.png" type="Texture" id=2]
[ext_resource path="res://images/background.jpg" type="Texture" id=3]
[ext_resource path="res://Scenes/LivesRemaining.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/soft-rain-ambient-111154.mp3" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Points.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/PauseScene.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 512, 0, 512, 512, 0, 512 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 512, 0, 512, 512, 0, 512 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 512, 0, 512, 512, 0, 512 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 512, 0, 512, 512, 0, 512 )

[sub_resource type="TileSet" id=6]
0/name = "Mossy - TileSet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 512 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Mossy - TileSet.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 512, 0, 512, 512 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 3 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "Mossy - TileSet.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 1024, 0, 512, 512 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Mossy - TileSet.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 512, 512, 512, 512 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 5 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[node name="mainScene" type="Node2D" groups=[
"main_scene",
]]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1080.0
margin_bottom = 720.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseScene" parent="." instance=ExtResource( 7 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 0, 720 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 10, -9.5 )
shape = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="Floor"]
scale = Vector2( 0.08, 0.08 )
tile_set = SubResource( 6 )
cell_size = Vector2( 512, 512 )
cell_quadrant_size = 8
collision_mask = 2
format = 1
tile_data = PoolIntArray( -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -131055, 1, 0, -131054, 1, 0, -131053, 1, 0, -131052, 1, 0, -131051, 1, 0, -131050, 1, 0, -131049, 1, 0, -131048, 1, 0, -131047, 1, 0, -131046, 1, 0, -131045, 1, 0, -1, 3, 0, -65536, 3, 0, -65535, 3, 0, -65534, 3, 0, -65533, 3, 0, -65532, 3, 0, -65531, 3, 0, -65530, 3, 0, -65529, 3, 0, -65528, 3, 0, -65527, 3, 0, -65526, 3, 0, -65525, 3, 0, -65524, 3, 0, -65523, 3, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, -65514, 3, 0, -65513, 3, 0, -65512, 3, 0, -65511, 3, 0, -65510, 3, 0, -65509, 3, 0 )

[node name="LivesRemaining" parent="." instance=ExtResource( 4 )]

[node name="Points" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 534.539, 347.451 )
stream = ExtResource( 5 )

[node name="DificultyTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DificultyTimer" to="." method="_on_DificultyTimer_timeout"]
